syntax = "proto3";
package message;

service VarifyService{
    rpc GetVarifyCode (GetVarifyReq) returns (GetVarifyRsp){};
}

message GetVarifyReq{
    int32 key = 1;
    string email = 2;
}

message GetVarifyRsp{
    int32 error = 1;
    string email = 2;
    string code = 3;
}